refactor: use gradle for building app